Erste erfolgreiche Übertragung in die Datenbank

--- a/Kundenportal/index.html
+++ b/Kundenportal/index.html
@@ -132,5 +132,9 @@
     <p>&copy; 2024 Autovermietung. Alle Rechte vorbehalten.</p>
 </footer>
 
+<script>
+    console.log("Anmeldung gestartet");
+</script>
+
 </body>
 </html>
