--- a/CRM-System/index.html
+++ b/CRM-System/index.html
@@ -3,62 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kundenportal Autovermietung</title>
+    <title>CRM-System Autovermietung</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        nav {
-            background-color: #555;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px 20px;
-        }
-        nav a:hover {
-            background-color: #777;
-        }
-        section {
-            padding: 20px;
-        }
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
+        /* Ihr CSS bleibt unverändert */
     </style>
 </head>
 <body>
 <header>
-    <h1>Willkommen im Kundenportal</h1>
+    <h1>Willkommen im CRM-System</h1>
 </header>
 <nav>
     <a href="#">Startseite</a>
-    <a href="#">Fahrzeugbuchung</a>
-    <a href="#">Meine Buchungen</a>
-    <a href="#">Profil</a>
-    <a href="#">Abmelden</a>
+    <a href="#">Anmelden</a>
 </nav>
 <section>
-    <h2>Herzlich Willkommen zurück, [Kundenname]!</h2>
-    <p>Hier können Sie Fahrzeuge buchen, Ihre aktuellen Buchungen einsehen und Ihr Profil verwalten.</p>
+    <h2>Bitte loggen Sie sich mit Ihren Mitarbeiterdaten ein</h2>
+    <form action="/projektWINFO/MALogin" method="POST"> <!-- Ändern der Action auf den Pfad Ihres Servlets -->
+        <label for="username">Benutzername:</label><br>
+        <input type="text" id="username" name="username" required><br><br>
+        <label for="password">Passwort:</label><br>
+        <input type="password" id="password" name="password" required><br><br>
+        <input type="submit" value="Anmelden">
+    </form>
+</section>
+
 </section>
 <footer>
     <p>&copy; 2024 Autovermietung. Alle Rechte vorbehalten.</p>
