Registrierungs-Skript angepasst

--- a/Kundenportal/registrierung.html
+++ b/Kundenportal/registrierung.html
@@ -228,16 +228,16 @@
         <div class="input-title">Kontaktdaten</div>
 
         <label for="strasse">Straße und Hausnummer:</label><br>
-        <input type="text" class="input-field" id="strasse" required><br>
+        <input name="strasse" type="text" class="input-field" id="strasse" required><br>
 
         <label for="ort">Ort:</label><br>
-        <input type="text" class="input-field" id="ort" required><br>
+        <input name="ort" type="text" class="input-field" id="ort" required><br>
 
         <label for="postleitzahl">Postleitzahl:</label><br>
-        <input type="text" class="input-field" id="postleitzahl" required><br>
+        <input name="postleitzahl" type="text" class="input-field" id="postleitzahl" required><br>
 
         <label for="telefonnummer">Telefonnummer:</label><br>
-        <input type="text" class="input-field" id="telefonnummer" required><br>
+        <input name="telefonnummer" type="text" class="input-field" id="telefonnummer" required><br>
 
         <label for="email">E-Mail:</label><br>
         <input id="email" name="email" type="email" class="input-field" required><br>
@@ -248,16 +248,16 @@
         <div class="input-title">Zahlungsdaten</div>
 
         <label for="blz">BLZ:</label><br>
-        <input type="text" class="input-field" id="blz" required><br>
+        <input name="blz" type="text" class="input-field" id="blz" required><br>
 
         <label for="institut">Institut:</label><br>
-        <input type="text" class="input-field" id="institut" required><br>
+        <input name="institut" type="text" class="input-field" id="institut" required><br>
 
         <label for="iban">IBAN:</label><br>
-        <input type="text" class="input-field" id="iban" required><br>
+        <input name="iban" type="text" class="input-field" id="iban" required><br>
 
         <label for="inhaber">Inhaber:</label><br>
-        <input type="text" class="input-field" id="inhaber" required><br>
+        <input name="inhaber" type="text" class="input-field" id="inhaber" required><br>
 
         <button type="button" class="button" onclick="validiereFormular()">Registrieren</button>
     </div>
